<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/dashboard_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dashIgm"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/circleprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/dashUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="33dp"
        android:fontFamily="sans-serif-medium"
        android:text="Username"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/dashIgm"
        app:layout_constraintTop_toTopOf="@+id/view" />

<!--    <TextView-->
<!--        android:id="@+id/dashNim"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:layout_marginTop="3dp"-->
<!--        android:fontFamily="sans-serif-medium"-->
<!--        android:text="nim"-->
<!--        android:textColor="#FFF"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintStart_toEndOf="@+id/dashIgm"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/dashUsername" />-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/form_rounded"
        android:elevation="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashIgm">

        <TextView
            android:id="@+id/mainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:textSize="14sp"
            android:text="Menu"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/jadwal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/jadwal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mm"
                    android:text="Jadwal"
                    android:textColor="#172646"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/history"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mm"
                    android:text="@string/history"
                    android:textColor="#172646"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/informasi"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/informasi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mm"
                    android:text="Akun"
                    android:textColor="#172646"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <!--    Card Presensi-->

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginVertical="5dp"-->
<!--                android:layout_marginLeft="7dp"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="15sp"-->
<!--                android:fontFamily="sans-serif"-->
<!--                android:text="Jadwal Selanjutnya"/>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jadwalToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_informasi"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linerEmptyView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/content_informasi"
        android:elevation="1dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="100dp"
                android:gravity="center"
                android:text="Tidak Ada Jadwal"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:accessibilityLiveRegion="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerEmptyView">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="600dp"
            android:gravity="center"
            android:numColumns="1"
            android:stretchMode="columnWidth"
            android:verticalSpacing="4dp" />

    </LinearLayout>

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBarImg"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginTop="39dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/view" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
